# c-_nbody

./: CMakeLists.txt  README.md  backend.py  collision.py  error_log.txt  main.py  playback.py  record.py  simulation.py  simulation_2.py  simulation_cpp.py
cpp/: acceleration.cpp  bindings.cpp  collision.cpp
data/1000_body/: 1000_body.txt
data/100_body/: 100_body.txt  introduction.txt
data/2_TEST_1000body_last_dt/: 2_TEST_1000body_last_dt.txt  introduction.txt
data/EARTH_SUN/: EARTH_SUN.txt
data/TEST_1000body_2000_2/: Introduction.txt  TEST_1000body_2000_2.txt  output0.txt  output1.txt
data/TEST_10body/: TEST_10body.txt
data/TEST_20body/: TEST_20body.txt
data/TEST_2body/: TEST_2body.txt  introduction.txt
data/TEST_40body/: TEST_40body.txt  introduction.txt
